--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "yeoman",
   "version": "0.0.0",
   "dependencies": {
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-uglify": "^0.9.2"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
