--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "yeoman",
   "version": "0.0.0",
+  "scripts": {
+    "watch": "grunt browserify:watch",
+    "build": "grunt build"
+  },
   "dependencies": {
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "^0.14.0",
